# gcode_inertia

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  arc.gcode  bambu_test_1part.gcode  bambu_test_1part_sym_30.gcode  bambu_test_2part.gcode  test.gcode
cli/: Cargo.toml
cli/src/: main.rs
example_gcodes/: README.md  bambu_test_1part.gcode  bambu_test_1part_sym.gcode  bambu_test_1part_sym_100.gcode
lib/: Cargo.toml
lib/src/: interpreter.rs  lib.rs  segments.rs
python/: README.md  example.py  setup.py
python/gcode_inertia/: __init__.py  cli.py  interpreter.py  segments.py
python/tests/: test_interpreter.py  test_segments.py
web/: Cargo.toml  index.html  style.css
web/src/: app.rs  main.rs
