[package]
name = "gcode_inertia_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gcode-inertia"
path = "src/main.rs"

[dependencies]
gcode_inertia = { path = "../lib" }
anyhow.workspace = true
nalgebra.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"