[package]
name = "gcode_inertia_web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gcode_inertia = { path = "../lib" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.7", features = ["csr"] }
log = "0.4"
nalgebra.workspace = true
send_wrapper = "0.6"
serde = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["FileList", "File"] }